--- a/WorkCalendar.html
+++ b/WorkCalendar.html
@@ -4,177 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Work Calendar</title>
-
-
-  <script>
-    const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
-const columns = ['All', '1st', '2nd', '3rd', '4th', '5th'];
-
-let halfDayOption = false;
-const formData = days.map(() => {
-  return columns.reduce((acc, col) => {
-    acc[col] = { checked: false, selected: 'full' };
-    return acc;
-  }, {});
-});
-
-// Generate the table dynamically
-function generateTable() {
-  const tbody = document.getElementById('calendarBody');
-  tbody.innerHTML = '';
-
-  days.forEach((day, index) => {
-    const row = document.createElement('tr');
-    const dayCell = document.createElement('td');
-    dayCell.textContent = day;
-    row.appendChild(dayCell);
-
-    columns.forEach(col => {
-      const cell = document.createElement('td');
-      const div = document.createElement('div');
-      div.classList.add('d-flex', 'align-items-center');
-
-      if (col === 'All') {
-        const checkbox = document.createElement('input');
-        checkbox.type = 'checkbox';
-        checkbox.checked = allChecked(index);
-        checkbox.onchange = (e) => toggleAll(index, e.target.checked);
-        div.appendChild(checkbox);
-      } else {
-        const checkbox = document.createElement('input');
-        checkbox.type = 'checkbox';
-        checkbox.checked = formData[index][col].checked;
-        checkbox.onchange = () => checkIfAllUnchecked(index);
-        div.appendChild(checkbox);
-
-        if (halfDayOption) {
-          const select = document.createElement('select');
-          select.classList.add('form-control', 'ml-2');
-          select.innerHTML = `
-            <option value="full">Full Day</option>
-            <option value="first-half">1st Half</option>
-            <option value="second-half">2nd Half</option>`;
-          select.value = formData[index][col].selected;
-          select.onchange = (e) => {
-            formData[index][col].selected = e.target.value;
-          };
-          div.appendChild(select);
-        }
-      }
-
-      cell.appendChild(div);
-      row.appendChild(cell);
-    });
-
-    tbody.appendChild(row);
-  });
-}
-
-// Check if all columns (except 'All') are checked
-function allChecked(rowIndex) {
-  return columns.slice(1).every(col => formData[rowIndex][col].checked);
-}
-
-// Toggle all checkboxes in a row when 'All' is checked/unchecked
-function toggleAll(rowIndex, isChecked) {
-  columns.slice(1).forEach(col => {
-    formData[rowIndex][col].checked = isChecked;
-  });
-  generateTable(); // Re-render the table
-}
-
-// Uncheck 'All' if any individual checkbox is unchecked
-function checkIfAllUnchecked(rowIndex) {
-  const allCheckedStatus = allChecked(rowIndex);
-  if (!allCheckedStatus) {
-    formData[rowIndex]['All'].checked = false;
-  }
-  generateTable(); // Re-render the table
-}
-
-// Toggle half-day option
-function toggleHalfDayOption() {
-  halfDayOption = document.getElementById('halfDayOption').checked;
-  generateTable(); // Re-render the table
-}
-
-// Handle form submission
-document.getElementById('workCalendarForm').addEventListener('submit', function (e) {
-  e.preventDefault();
-  console.log('Form Data:', formData);
-  console.log('Half Day Option:', halfDayOption);
-});
-
-generateTable();
-
-  </script>
-<style>
+  
+  <!-- CSS goes here inside the <style> tag -->
+  <style>
     .table {
-  width: 100%;
-  border-collapse: collapse;
-}
+      width: 100%;
+      border-collapse: collapse;
+    }
 
-.table th, .table td {
-  padding: 15px;
-  text-align: center;
-  border: 1px solid #dee2e6;
-  vertical-align: middle;
-}
+    .table th, .table td {
+      padding: 15px;
+      text-align: center;
+      border: 1px solid #dee2e6;
+      vertical-align: middle;
+    }
 
-.table thead th {
-  background-color: #f8f9fa;
-  font-weight: bold;
-}
+    .table thead th {
+      background-color: #f8f9fa;
+      font-weight: bold;
+    }
 
-.d-flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+    .d-flex {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-.ml-2 {
-  margin-left: 10px;
-}
+    .ml-2 {
+      margin-left: 10px;
+    }
 
-.form-check input[type="checkbox"] {
-  margin-right: 10px;
-}
+    .form-check input[type="checkbox"] {
+      margin-right: 10px;
+    }
 
-select.form-control {
-  width: 150px;
-  max-width: 150px;
-  height: 36px;
-  padding: 5px;
-}
+    .form-check label {
+      margin-bottom: 0;
+    }
 
-.btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
-  padding: 10px 20px;
-  font-size: 16px;
-}
+    select.form-control {
+      width: 150px;
+      max-width: 150px;
+      height: 36px;
+      padding: 5px;
+    }
 
-.btn-primary:hover {
-  background-color: #0056b3;
-  border-color: #004085;
-}
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+      padding: 10px 20px;
+      font-size: 16px;
+    }
 
-.table-bordered td, .table-bordered th {
-  border: 2px solid #ddd;
-}
+    .btn-primary:hover {
+      background-color: #0056b3;
+      border-color: #004085;
+    }
 
-input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
-}
+    .table-bordered td, .table-bordered th {
+      border: 2px solid #ddd;
+    }
 
-</style>
+    input[type="checkbox"] {
+      width: 20px;
+      height: 20px;
+    }
+  </style>
 </head>
 <body>
 
   <div>
     <h2>Add Work Calendar</h2>
-    <form id="workCalendarForm">
+    <form id="workCalendarForm" onsubmit="submitForm(event)">
       <div class="form-check">
         <input type="checkbox" id="halfDayOption" onchange="toggleHalfDayOption()">
         <label for="halfDayOption">Half working day & half weekend</label>
@@ -192,14 +93,106 @@ input[type="checkbox"] {
             <th>5th</th>
           </tr>
         </thead>
-        <tbody id="calendarBody"></tbody>
+        <tbody id="calendarTable">
+        </tbody>
       </table>
 
       <button type="submit" class="btn btn-primary">Save</button>
     </form>
   </div>
 
-  
-</body>
+  <!-- JavaScript goes here inside the <script> tag -->
+  <script>
+    const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+    const columns = ['All', '1st', '2nd', '3rd', '4th', '5th'];
+    const formData = days.map(() => {
+      return columns.reduce((acc, col) => {
+        acc[col] = { checked: false, selected: 'full' };
+        return acc;
+      }, {});
+    });
 
+    function loadTable() {
+      const tableBody = document.getElementById('calendarTable');
+      tableBody.innerHTML = ''; // Clear the table body
+      formData.forEach((row, rowIndex) => {
+        const tr = document.createElement('tr');
+        const dayCell = document.createElement('td');
+        dayCell.textContent = days[rowIndex];
+        tr.appendChild(dayCell);
+
+        columns.forEach((col) => {
+          const td = document.createElement('td');
+          const div = document.createElement('div');
+          div.classList.add('d-flex', 'align-items-center');
+
+          if (col === 'All') {
+            const allCheckbox = document.createElement('input');
+            allCheckbox.type = 'checkbox';
+            allCheckbox.checked = allChecked(rowIndex);
+            allCheckbox.onchange = (e) => toggleAll(rowIndex, e.target.checked);
+            div.appendChild(allCheckbox);
+          } else {
+            const checkbox = document.createElement('input');
+            checkbox.type = 'checkbox';
+            checkbox.checked = formData[rowIndex][col].checked;
+            checkbox.onchange = () => checkIfAllUnchecked(rowIndex);
+            div.appendChild(checkbox);
+
+            const select = document.createElement('select');
+            select.classList.add('form-control', 'ml-2');
+            select.style.display = halfDayOptionChecked() ? 'inline-block' : 'none';
+            select.innerHTML = `
+              <option value="full">Full Day</option>
+              <option value="first-half">1st Half</option>
+              <option value="second-half">2nd Half</option>
+            `;
+            select.value = formData[rowIndex][col].selected;
+            select.onchange = (e) => formData[rowIndex][col].selected = e.target.value;
+            div.appendChild(select);
+          }
+
+          td.appendChild(div);
+          tr.appendChild(td);
+        });
+
+        tableBody.appendChild(tr);
+      });
+    }
+
+    function toggleHalfDayOption() {
+      loadTable(); // Re-render the table when the halfDayOption is toggled
+    }
+
+    function halfDayOptionChecked() {
+      return document.getElementById('halfDayOption').checked;
+    }
+
+    function allChecked(rowIndex) {
+      return columns.slice(1).every(col => formData[rowIndex][col].checked);
+    }
+
+    function toggleAll(rowIndex, isChecked) {
+      columns.slice(1).forEach(col => {
+        formData[rowIndex][col].checked = isChecked;
+      });
+      loadTable(); // Re-render to reflect the changes
+    }
+
+    function checkIfAllUnchecked(rowIndex) {
+      const allCheckedStatus = allChecked(rowIndex);
+      formData[rowIndex]['All'].checked = allCheckedStatus;
+      loadTable(); // Re-render to reflect the changes
+    }
+
+    function submitForm(event) {
+      event.preventDefault();
+      console.log('Form data:', formData);
+      alert('Form submitted. Check the console for details.');
+    }
+
+    // Load the table when the page is loaded
+    window.onload = loadTable;
+  </script>
+</body>
 </html>
